--- a/html/singleCalculator.html
+++ b/html/singleCalculator.html
@@ -31,7 +31,7 @@
       </button>
       <button id="clearBTN" class="operationBtns">
         <i class="fa-solid fa-dumpster" style="margin-right: 10px"></i>
-        Clear data
+        Clear data and return
       </button>
 
       <video autoplay muted loop id="sectionSplashScreen">
