responsive update beta

--- a/html/singleCalculator.html
+++ b/html/singleCalculator.html
@@ -40,24 +40,33 @@
 
       <section class="result">
         <div class="info">
-          <div id="dataResultDate1">No data</div>
-          <div id="dataResultMonth1">No data</div>
-          <div id="dataResultYear1">No data</div>
+          <section>
+            <div id="dataResultDate1">No data</div>
+            <div id="dataResultMonth1">No data</div>
+            <div id="dataResultYear1">No data</div>
+          </section>
           <hr />
-          <div id="dataResultAll1">No data</div>
-          <div id="dataResultDate1_Month1">No data</div>
-          <div id="dataResultDate1_Year1">No data</div>
-          <div id="dataResultMonth1_Year1">No data</div>
+          <section>
+            <div id="dataResultAll1">No data</div>
+            <div id="dataResultDate1_Month1">No data</div>
+            <div id="dataResultDate1_Year1">No data</div>
+            <div id="dataResultMonth1_Year1">No data</div>
+          </section>
           <hr />
-          <div id="Number1">No data</div>
-          <div id="Number2">No data</div>
-          <div id="Number3">No data</div>
-          <div id="Number4">No data</div>
-          <div id="Number5">No data</div>
-          <div id="Number6">No data</div>
-          <div id="Number7">No data</div>
-          <div id="Number8">No data</div>
-          <div id="Number9">No data</div>
+          <section>
+            <div id="Number1">No data</div>
+            <div id="Number2">No data</div>
+            <div id="Number3">No data</div>
+            <div id="Number4">No data</div>
+            <div id="Number5">No data</div>
+          </section>
+          <hr class="hrVisible" />
+          <section>
+            <div id="Number6">No data</div>
+            <div id="Number7">No data</div>
+            <div id="Number8">No data</div>
+            <div id="Number9">No data</div>
+          </section>
         </div>
 
         <!-- <div class="combinations">
