--- a/html/singleCalculator.html
+++ b/html/singleCalculator.html
@@ -69,9 +69,7 @@
           </section>
         </div>
 
-        <!-- <div class="combinations">
-          <p></p>
-        </div> -->
+        <!-- <p class="combinations"></p> -->
 
         <div class="resultImage">
           <div></div>
