--- a/html/singleCalculator.html
+++ b/html/singleCalculator.html
@@ -21,103 +21,111 @@
     </header>
 
     <main>
+      <!-- Background locked-->
       <p class="singleCalcDescripton">
         Calculate 1-input date and feel the power of the myth.
       </p>
-
-      <button id="operationFirstBTN" class="operationBtns">
-        <i class="fa-solid fa-calculator" style="margin-right: 10px"></i>
-        Start calculation
-      </button>
-      <button id="clearBTN" class="operationBtns">
-        <i class="fa-solid fa-dumpster" style="margin-right: 10px"></i>
-        Clear data and return
-      </button>
 
       <video autoplay muted loop id="sectionSplashScreen">
         <source src="../Videos/singleCalcSplash.mp4" type="video/mp4" />
       </video>
 
-      <section class="result">
-        <div class="info">
-          <section>
-            <div id="dataResultDate1">No data</div>
-            <div id="dataResultMonth1">No data</div>
-            <div id="dataResultYear1">No data</div>
-          </section>
-          <hr />
-          <section>
-            <div id="dataResultAll1">No data</div>
-            <div id="dataResultDate1_Month1">No data</div>
-            <div id="dataResultDate1_Year1">No data</div>
-            <div id="dataResultMonth1_Year1">No data</div>
-          </section>
-          <hr />
-          <section>
-            <div id="Number1">No data</div>
-            <div id="Number2">No data</div>
-            <div id="Number3">No data</div>
-            <div id="Number4">No data</div>
-            <div id="Number5">No data</div>
-          </section>
-          <hr class="hrVisible" />
-          <section>
-            <div id="Number6">No data</div>
-            <div id="Number7">No data</div>
-            <div id="Number8">No data</div>
-            <div id="Number9">No data</div>
-          </section>
+      <!-- Input Style -->
+      <section class="screenResult">
+        <div class="btns">
+          <button id="operationFirstBTN" class="operationBtns">
+            <i class="fa-solid fa-calculator" style="margin-right: 10px"></i>
+            Start calculation
+          </button>
+          <button id="clearBTN" class="operationBtns">
+            <i class="fa-solid fa-dumpster" style="margin-right: 10px"></i>
+            Clear data and return
+          </button>
         </div>
 
-        <!-- <p class="combinations"></p> -->
-
-        <div class="resultImage">
-          <div></div>
-          <div></div>
-          <div id="Headnumber" class="headNumber">No data</div>
-          <div></div>
-          <div></div>
-
-          <img id="cell1" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick1" class="matcher1"></div></div>
-          <img id="cell4" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick2" class="matcher1"></div></div>
-          <img id="cell7" class="img" src="" alt="No data" />
-
-          <div class="wrapper"><div id="stick3" class="matcher2"></div></div>
-          <div class="wrapper">
-            <div id="stick4" class="matcher3_left_top"></div>
+        <section class="result">
+          <div class="info">
+            <section>
+              <div id="dataResultDate1">No data</div>
+              <div id="dataResultMonth1">No data</div>
+              <div id="dataResultYear1">No data</div>
+            </section>
+            <hr />
+            <section>
+              <div id="dataResultAll1">No data</div>
+              <div id="dataResultDate1_Month1">No data</div>
+              <div id="dataResultDate1_Year1">No data</div>
+              <div id="dataResultMonth1_Year1">No data</div>
+            </section>
+            <hr />
+            <section>
+              <div id="Number1">No data</div>
+              <div id="Number2">No data</div>
+              <div id="Number3">No data</div>
+              <div id="Number4">No data</div>
+              <div id="Number5">No data</div>
+            </section>
+            <hr class="hrVisible" />
+            <section>
+              <div id="Number6">No data</div>
+              <div id="Number7">No data</div>
+              <div id="Number8">No data</div>
+              <div id="Number9">No data</div>
+            </section>
           </div>
-          <div class="wrapper"><div id="stick5" class="matcher2"></div></div>
-          <div class="wrapper">
-            <div id="stick6" class="matcher3_right_top"></div>
-          </div>
-          <div class="wrapper"><div id="stick7" class="matcher2"></div></div>
 
-          <img id="cell2" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick8" class="matcher1"></div></div>
-          <img id="cell5" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick9" class="matcher1"></div></div>
-          <img id="cell8" class="img" src="" alt="No data" />
+          <!-- <p class="combinations"></p> -->
 
-          <div class="wrapper"><div id="stick10" class="matcher2"></div></div>
-          <div class="wrapper">
-            <div id="stick11" class="matcher3_left_bottom"></div>
-          </div>
-          <div class="wrapper"><div id="stick12" class="matcher2"></div></div>
-          <div class="wrapper">
-            <div id="stick13" class="matcher3_right_bottom"></div>
-          </div>
-          <div class="wrapper"><div id="stick14" class="matcher2"></div></div>
+          <div class="resultImage">
+            <div></div>
+            <div></div>
+            <div id="Headnumber" class="headNumber">No data</div>
+            <div></div>
+            <div></div>
 
-          <img id="cell3" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick15" class="matcher1"></div></div>
-          <img id="cell6" class="img" src="" alt="No data" />
-          <div class="wrapper"><div id="stick16" class="matcher1"></div></div>
-          <img id="cell9" class="img" src="" alt="No data" />
-        </div>
+            <img id="cell1" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick1" class="matcher1"></div></div>
+            <img id="cell4" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick2" class="matcher1"></div></div>
+            <img id="cell7" class="img" src="" alt="No data" />
+
+            <div class="wrapper"><div id="stick3" class="matcher2"></div></div>
+            <div class="wrapper">
+              <div id="stick4" class="matcher3_left_top"></div>
+            </div>
+            <div class="wrapper"><div id="stick5" class="matcher2"></div></div>
+            <div class="wrapper">
+              <div id="stick6" class="matcher3_right_top"></div>
+            </div>
+            <div class="wrapper"><div id="stick7" class="matcher2"></div></div>
+
+            <img id="cell2" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick8" class="matcher1"></div></div>
+            <img id="cell5" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick9" class="matcher1"></div></div>
+            <img id="cell8" class="img" src="" alt="No data" />
+
+            <div class="wrapper"><div id="stick10" class="matcher2"></div></div>
+            <div class="wrapper">
+              <div id="stick11" class="matcher3_left_bottom"></div>
+            </div>
+            <div class="wrapper"><div id="stick12" class="matcher2"></div></div>
+            <div class="wrapper">
+              <div id="stick13" class="matcher3_right_bottom"></div>
+            </div>
+            <div class="wrapper"><div id="stick14" class="matcher2"></div></div>
+
+            <img id="cell3" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick15" class="matcher1"></div></div>
+            <img id="cell6" class="img" src="" alt="No data" />
+            <div class="wrapper"><div id="stick16" class="matcher1"></div></div>
+            <img id="cell9" class="img" src="" alt="No data" />
+          </div>
+        </section>
       </section>
     </main>
+
+    <div id="hiddenMatch" style="display: none"></div>
 
     <script src="../js/singleCalculation.js"></script>
   </body>
